OM-45691: DEVOPS-823 update to java 11 in xl - rb:30951